[package]
name = "euler"
version = "1.0.0"
edition = "2021"
default-run = "euler"

[dependencies]
clap = { version = "4.0.4", features = ["derive"] }
owo-colors = "3.5.0"
scraper = "0.14.0"
requestty = "0.4.1"
reqwest = "0.11"
tokio = { version = "1.23", features = ["full"] }
regex = "1"
html-escape = "0.2.13"
num-bigint = "0.4.3"
phf = { version = "0.11.1", features = ["macros"] }

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
