[package]
name = "euler"
version = "1.0.0"
edition = "2021"
default-run = "euler"

[dependencies]
clap = { version = "4.0.4", features = ["derive"] }
scraper = "0.14.0"
requestty = "0.4.1"
reqwest = "0.11"
tokio = { version = "1.23", features = ["full"] }
regex = "1"
html-escape = "0.2.13"
phf = { version = "0.11.1", features = ["macros"] }
rayon = "1.7.0"
owo-colors = "3.5.0"
num-bigint = "0.4.3"

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
