[package]
name = "euler"
version = "1.0.0"
edition = "2021"
default-run = "euler"

[dependencies]
clap = { version = "4.4.10", features = ["derive"] }
scraper = "0.18.1"
requestty = "0.5.0"
reqwest = "0.11.22"
tokio = { version = "1.34.0", features = ["full"] }
regex = "1.10.2"
html-escape = "0.2.13"
phf = { version = "0.11.2", features = ["macros"] }
rayon = "1.8.0"
owo-colors = "3.5.0"
once_cell = "1.18.0"
num-to-words = "0.1.1"

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
